# rr-axum-mysql

./: .env  Cargo.toml
sql/: create_dev_db.sql
src/: main.rs
src/db/: dev_db.rs  mod.rs
src/sql/: create_dev_table.sql
