[package]
name = "rr-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql"] }
dotenv = "0.15"
anyhow = "1"
